# bibliotekaNumeryczna

BibliotekaMN/: CMakeLists.txt  main.cpp
BibliotekaMN/include/: aproksymacja.h  biblioteka_metody_numeryczne.h  calkowanie_numeryczne.h  interpolacja.h  rownania_nieliniowe.h  rownania_rozniczkowe.h  uklady_liniowe.h
BibliotekaMN/przyklady/: przyklad_interpolacja.cpp  przyklad_uklady_liniowe.cpp
BibliotekaMN/src/: aproksymacja.cpp  calkowanie_numeryczne.cpp  interpolacja.cpp  rownania_nieliniowe.cpp  rownania_rozniczkowe.cpp  uklady_liniowe.cpp
BibliotekaMN/testy/: testy.cpp
